--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -1,5 +1,4 @@
-Bug fix list history:
-
 =========================================================
-xx.xx.2008   1.0 RCxx
+xx.xx.2008   1.0 RC-1
 =========================================================
+- First release candidate
