Misc changes & fixes, mainly to blocks
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@3370 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,4 @@
-Bug fix list history:
-
 =========================================================
-xx.xx.2008   1.0 RCxx
+xx.xx.2008   1.0 RC-1
 =========================================================
+- First release candidate
