Set date and added latest updates/fixes
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@3961 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,6 @@
+Impression changelog:
+
 =========================================================
-xx.xx.2008   1.0 RC-1
+01.08.2008   1.0 RC-1
 =========================================================
 - First release candidate
