--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -1,4 +1,6 @@
+Impression changelog:
+
 =========================================================
-xx.xx.2008   1.0 RC-1
+01.08.2008   1.0 RC-1
 =========================================================
 - First release candidate
