--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 Impression changelog:
 
 =========================================================
+xx.xx.2008   1.0 RC-2
+=========================================================
+- Fixed bug in blocks in case folder name was renamed
+
+=========================================================
 01.08.2008   1.0 RC-1
 =========================================================
 - First release candidate
