Added option to Index Page to show Latest Articles
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@4208 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ Impression changelog:
 =========================================================
 xx.xx.2008   1.0 RC-2
 =========================================================
+- Added option to display Latest Articles on Index Page
+
 - Added Portuguese-Brazilian language files [gibaphp]
 
 - Fixed bug in blocks in case folder name was renamed
