Set date and status to RC-2.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@4390 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,11 @@
 Impression changelog:
 
 =========================================================
-xx.xx.2008   1.0 RC-2
+18.08.2008   1.0 RC-2
 =========================================================
 - Added option to display Latest Articles on Index Page [trabis & mcdonald]
+- Changed height of editor field for intro text & main text
 
-- Added Portuguese-Brazilian language files [gibaphp]
 - Converted Dutch & English language files to UTF-8
 
 - Fixed bug in blocks in case folder name was renamed
