--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -4,7 +4,9 @@ xx.xx.2008   1.0 RC-x
 - Set name of submitter as author in PDF instead of TCPDF
 - Revamped administration
 - New About page
+
 - Added: unofficial translations of GNU GPL License
+- Added: RSS feeds through icmsfeed.php
 
 - Converted language files to UTF-8 without BOM
 
