Multiple updates like RSS feeds through icmsfeed.php
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@6106 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,9 @@ xx.xx.2008   1.0 RC-x
 - Set name of submitter as author in PDF instead of TCPDF
 - Revamped administration
 - New About page
+
 - Added: unofficial translations of GNU GPL License
+- Added: RSS feeds through icmsfeed.php
 
 - Converted language files to UTF-8 without BOM
 
