--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -4,6 +4,7 @@ xx.xx.2008   1.0 RC-x
 - Set name of submitter as author in PDF instead of TCPDF
 - Revamped administration
 - New About page
+- Activated Tag blocks and Tag bar in articles
 
 - Added: unofficial translations of GNU GPL License
 - Added: RSS feeds through icmsfeed.php
@@ -25,7 +26,6 @@ xx.xx.2008   1.0 RC-x
 
 - Fixed bug in blocks in case folder name was renamed
 - Fixed bug in output in case dhtml editor is used
-
 
 
 =========================================================
