--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -1,5 +1,5 @@
 =========================================================
-xx.xx.2008   1.0 RC-x
+04.11.2008   1.0 RC-3
 =========================================================
 - Set name of submitter as author in PDF instead of TCPDF
 - Revamped administration
@@ -9,7 +9,9 @@ xx.xx.2008   1.0 RC-x
 - Added: unofficial translations of GNU GPL License
 - Added: RSS feeds through icmsfeed.php
 
-- Converted language files to UTF-8 without BOM
+- German language files [prickel + sato-san]
+- Portuguese-Brazil language files [gibaphp]
+- Converted uk / nl language files to UTF-8 without BOM
 
 - Fixed: bug for displaying name author in PDF
 - Fixed: altcat entries were not deleted when deleting article or cat
