Added RSS Feed configuration form
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@7148 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@
 
 - Added: unofficial translations of GNU GPL License
 - Added: RSS feeds through icmsfeed.php
+- Added: RSS feed configuration form
 
 - German language files [prickel + sato-san]
 - Portuguese-Brazil language files [gibaphp]
