Updated changelog and added algalochkin as translator
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@7171 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -12,11 +12,14 @@
 
 - German language files [prickel + sato-san]
 - Portuguese-Brazil language files [gibaphp]
+- Russian language files [algalochkin]
 - Converted uk / nl language files to UTF-8 without BOM
 
 - Fixed: bug for displaying name author in PDF
 - Fixed: altcat entries were not deleted when deleting article or cat
 - Fixed: block settings [skenow]
+
+- Removed: file admin/brokenarticle.php
 
 
 =========================================================
