--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -1,4 +1,13 @@
 =========================================================
+xx.xx.2011 - Version 1.x
+=========================================================
+Removed files:
+- include/update.php
+- sql (folder)
+- sql/impression.sql
+- sql/index.html
+
+=========================================================
 25.09.2011 - Version 1.1
 =========================================================
 - Updated for ImpressCMS 1.3
