Removed file class/class_thumbnail.php
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23030 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,9 @@ Added:
 Fixed:
 - Captcha in Submit form causes issues
 
+Removed files:
+- class/class_thumbnail.php
+
 =========================================================
 25.09.2011 - Version 1.1
 =========================================================
