Updated styling + changelog
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23212 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,10 +2,11 @@
 xx.xx.2011 - Version 1.x
 =========================================================
 Added:
-- Social media buttons for Facebook, Google 1+ and Twitter
+- social media buttons for Facebook, Google 1+ and Twitter
 
 Fixed:
-- Captcha in Submit form causes issues
+- captcha in Submit form causes issues
+- block news by category
 
 Removed files:
 - class/class_thumbnail.php
