Added help tips
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23318 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ xx.xx.2012 - Version 1.x
 =========================================================
 Added:
 - social media buttons for Facebook, Google 1+ and Twitter
+- help tips to forms
 
 Fixed:
 - captcha in Submit form causes issues
