Modification, modification, modification
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23772 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,12 +2,17 @@
 xx.xx.2012 - Version 1.x
 =========================================================
 Added:
-- social media buttons for Facebook, Google 1+ and Twitter
-- help tips to forms
+- Social media buttons for Facebook, Google 1+ and Twitter
+- Tool tips to forms
+- Lytebox version 5.5
 
 Fixed:
-- captcha in Submit form causes issues
-- block news by category
+- Captcha in Submit form causes issues
+- Block news by category
+- MySQL errors when updating
+
+Removed:
+- Option to turn on/off latest links in Index Page
 
 Removed files:
 - class/class_thumbnail.php
