Articles can be set online/offline by clicking icon
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23792 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ xx.xx.2012 - Version 1.x
 =========================================================
 Added:
 - Social media buttons for Facebook, Google 1+ and Twitter
+- Articles can be set online/offline by clicking icon
 - Tool tips to forms
 - Lytebox version 5.5
 
@@ -10,6 +11,7 @@ Fixed:
 - Captcha in Submit form causes issues
 - Block news by category
 - MySQL errors when updating
+- Disabled XOOPS Tag module
 
 Removed:
 - Option to turn on/off latest links in Index Page
