Added link to manual to About page
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23808 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ xx.xx.2012 - Version 1.x
 Added:
 - Social media buttons for Facebook, Google 1+ and Twitter
 - Articles can be set online/offline by clicking status icon
+- Link to manual in About page
 - Tool tips to forms
 - Lytebox version 5.5
 
