--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 =========================================================
-xx.xx.2012 - Version 1.x
+04.03.2012 - Version 1.11
 =========================================================
 Added:
 - Social media buttons for Facebook, Google 1+ and Twitter
