Update SmartSection import script, moved it to a separate folder called 'import'.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23831 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,8 @@ Added:
 - Link to manual in About page
 - Tool tips to forms
 - Lytebox version 5.5
+- Social Share Privacy 1.3
+- Import script for SmartSection
 
 Fixed:
 - Captcha in Submit form causes issues
