--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -1,5 +1,5 @@
 =========================================================
-04.03.2012 - Version 1.11
+xx.xx.2012 - Version 1.11
 =========================================================
 Added:
 - Social media buttons for Facebook, Google 1+ and Twitter
@@ -9,6 +9,7 @@ Added:
 - Lytebox version 5.5
 - Social Share Privacy 1.3
 - Import script for SmartSection
+- Import script for News
 
 Fixed:
 - Captcha in Submit form causes issues
