--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -1,5 +1,5 @@
 =========================================================
-xx.xx.2012 - Version 1.11
+18.03.2012 - Version 1.11
 =========================================================
 Added:
 - Social media buttons for Facebook, Google 1+ and Twitter
