Setting date and status
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@23894 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 =========================================================
-xx.xx.2012 - Version 1.11
+18.03.2012 - Version 1.11
 =========================================================
 Added:
 - Social media buttons for Facebook, Google 1+ and Twitter
