Removed class/myts_extended.php
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@23990 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -30,6 +30,7 @@ Removed:
 
 Removed files:
 - class/class_thumbnail.php
+- class/myts_extended.php
 - images/icon/backgnd.png
 
 =========================================================
