--- a/modules/impression/changelog.txt
+++ b/modules/impression/changelog.txt
@@ -1,10 +1,10 @@
 =========================================================
-18.03.2012 - Version 1.11
+06.04.2012 - Version 1.11
 =========================================================
 Added:
 - Social media buttons for Facebook, Google 1+ and Twitter
 - Articles can be set online/offline by clicking status icon
-- Fixed issue of open <a> tag in comments
+- Fixed <a> tag issue in comments
 - Ticker/Marquee block
 - Link to manual in About page
 - Tool tips to forms
