Stopped supporting TinyEditor and XOOPS TAG module. Removed code and associated files.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24531 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,21 @@
 =========================================================
+xx.xx.2012 - Version x
+=========================================================
+Added:
+- IPF classes
+
+Removed:
+- support for TinyEditor
+- support for XOOPS TAG module
+
+Removed files:
+- list.tag.php
+- view.tag.php
+- blocks/impression_block_tag.php
+- include/install.php
+- include/plugin.tag.php
+
+=========================================================
 06.04.2012 - Version 1.11
 =========================================================
 Added:
