Committing multiple updates
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24550 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ xx.xx.2012 - Version x
 =========================================================
 Added:
 - IPF classes
+- Automatic deleting of obsolete files and folders
 
 Removed:
 - support for TinyEditor
