Option to enable/disable Lytebox library for help tips
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24642 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,11 @@
 =========================================================
-xx.xx.2012 - Version x
+xx.xx.2012 - Version 1.12
 =========================================================
 Added:
 - IPF classes
 - Automatic deleting of obsolete files and folders
+- Option to switch between IPF tables and normal tables
+- Option to enable/disable Lytebox library for help tips
 
 Removed:
 - support for TinyEditor
