Fixed: Id and name of approver of an article wasn't stored in database
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24650 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,9 @@ Added:
 - Option to switch between IPF tables and normal tables
 - Option to enable/disable Lytebox library for help tips
 
+Fixed:
+- Id and name of approver of an article wasn't stored in database
+
 Removed:
 - support for TinyEditor
 - support for XOOPS TAG module
