Setting status and release date
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24788 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 =========================================================
-xx.xx.2012 - Version 1.12
+21.12.2012 - Version 1.12
 =========================================================
 Added:
 - IPF classes
@@ -9,6 +9,7 @@ Added:
 
 Fixed:
 - Id and name of approver of an article wasn't stored in database
+- Converted CRLF linebreaks of files to LF linebreaks
 
 Removed:
 - support for TinyEditor
