Fixed: Link of edit, delete and clone icon not working when not in IPF mode
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@24939 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 =========================================================
+xx.xx.201x - Version 1.1x
+=========================================================
+Fixed:
+- Link of edit, delete and clone icon not working when not in IPF mode
+
+=========================================================
 21.12.2012 - Version 1.12
 =========================================================
 Added:
