Added CKeditor to list of editors that can be used with Impression
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/tasks/impression_ipf@25000 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 =========================================================
 xx.xx.201x - Version 1.1x
 =========================================================
+Added:
+- Added CKeditor to list of editors that can be used with Impression
+
 Fixed:
 - Link of edit, delete and clone icon not working when not in IPF mode
 
